--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="choose_team">Geben Sie den Namen ihres Vereins ein!</string>
+    <string name="search_team">Verein suchen</string>
+    <string name="title_activity_search_results">SearchResults</string>
 </resources>
