--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="choose_team">Geben Sie den Namen ihres Vereins ein!</string>
     <string name="search_team">Verein suchen</string>
-    <string name="title_activity_search_results">SearchResults</string>
+    <string name="search_result">Gefundene Vereine:</string>
 </resources>
