Data write to local Database finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="search_team">Verein suchen</string>
     <string name="search_result">Gefundene Vereine:</string>
     <string name="teams_overview">Mannschaften</string>
-    <string name="title_activity_overview">OverviewActivity</string>
+    <string name="title_activity_overview">Mein Verein</string>
 </resources>
