Games Detail Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="search_result">Gefundene Vereine:</string>
     <string name="teams_overview">Mannschaften</string>
     <string name="title_activity_overview">Mein Verein</string>
+    <string name="title_activity_games_overview">GamesOverviewActivity</string>
+    <string name="games_overview">Spiele:</string>
+    <string name="title_activity_game_detail">GameDetailActivity</string>
 </resources>
