Styling the application without ActionBarStyling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="choose_team">Geben Sie den Namen ihres Vereins ein!</string>
     <string name="search_team">Verein suchen</string>
     <string name="search_result">Gefundene Vereine:</string>
-    <string name="teams_overview">Mannschaften</string>
+    <string name="teams_overview">Mannschaften:</string>
     <string name="title_activity_overview">Mein Verein</string>
     <string name="title_activity_games_overview">GamesOverviewActivity</string>
     <string name="games_overview">Spiele:</string>
